<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.suncha.myleads.AddLeadDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.v7.widget.CardView
            android:id="@+id/organisation_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/company"
                    android:textColor="@color/cyan"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/out_organisation_name"
                    style="@style/textviewStyle"
                    android:hint="@string/company_name" />

                <TextView
                    android:id="@+id/out_organisation_address"
                    style="@style/textviewStyle"
                    android:hint="@string/address" />

                <TextView
                    android:id="@+id/out_organisation_phone"
                    style="@style/textviewStyle"
                    android:hint="@string/phone" />

                <TextView
                    android:id="@+id/et_website"
                    style="@style/textviewStyle"
                    android:hint="@string/website" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/person_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/organisation_details"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/contact_person"
                    android:textColor="@color/cyan"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/out_person_name"
                    style="@style/textviewStyle"
                    android:hint="@string/person_name" />

                <TextView
                    android:id="@+id/out_designation"
                    style="@style/textviewStyle"
                    android:hint="@string/designation" />

                <TextView
                    android:id="@+id/out_mobile_no"
                    style="@style/textviewStyle"
                    android:hint="@string/mobile_no" />

                <TextView
                    android:id="@+id/out_email"
                    style="@style/textviewStyle"
                    android:hint="@string/email" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/remarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_details"
            android:layout_marginTop="8dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="8dp"
                    android:paddingLeft="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/discussion_notes"
                    android:textColor="@color/cyan"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView

                    style="@style/textviewStyle"
                    android:text="@string/product"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/out_product"
                    style="@style/textviewStyle"
                    android:hint="@string/product"
                    android:inputType="textMultiLine" />


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/out_meetingdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/met_date" />

                    <TextView
                        android:id="@+id/output_of_meetingdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_toRightOf="@id/out_meetingdate"
                        android:hint="@string/met_date" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/out_follow_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:text="@string/follow_up_on" />

                    <TextView
                        android:id="@+id/output_of_followupdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_toRightOf="@id/out_follow_up"
                        android:text="@string/follow_up_on" />
                </RelativeLayout>


                <TextView

                    style="@style/textviewStyle"
                    android:text="@string/remarks"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/out_remarks"
                    style="@style/textviewStyle"
                    android:hint="@string/remarks"
                    android:inputType="textMultiLine" />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <!--add an option to edit the entry at the actionbar-->


</ScrollView>
